<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="celestial_ways_title">Celestial Ways</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="general_category">General</string>
    <string name="gestures_category">Gestures</string>
    <string name="music_category">Music</string>
    <string name="security_category">Security</string>
    <string name="hardware_category">Hardware</string>
    <string name="icons_category">Icons</string>
    <string name="aosp_recents_category">AOSP recents</string>
    <string name="light_category">Lights</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="recents_category">Recents</string>
    <string name="recents_category_summary">Transcend the recents panel</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="status_bar_category_summary">Transcend the look of statusbar</string>
    <string name="notifications_panel_category">Notifications panel</string>
    <string name="notifications_panel_category_summary">Transcending options for notifications/QuickSettings panel</string>
    <string name="system_category">System</string>
    <string name="system_category_summary">Transcendence ways for the system</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="lockscreen_category_summary">Bless your lockscreen with the celestial ways</string>
    <string name="navigation_category">Navigation</string>
    <string name="navigation_category_summary">Choose your way for setting the navbar</string>
    <string name="build_tweaks_summary_title">Transcend your settings options</string>
    <string name="general_tweaks_title">General Tweaks</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="carrierlabel_title">Carrier Label</string>
    <string name="misc_ways_title">Misc ways</string>
    <string name="recents_ui_title">Recents UI</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="notifications_title">Notifications</string>
    <string name="navigationbar_settings_title">Navigation bar</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="buttons_title">Buttons</string>
    <string name="app_ops_category">App Ops</string>
    <string name="celestial_ways_dialog_title">Help us help you!</string>
    <string name="celestial_ways_dialog_message">If you find a bug with any of these settings, report to GeneticEnginer on telegram. You MUST include the following when sending a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="celestial_ways_dialog_toast">READ THE WHOLE THING!</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="carrier_label_warning_text">Be advised that the custom carrier label is not available in the extended statusbar area, also known as the quick settings area. Also using emojis as your carrier label might cause some visibility issues on lighter backgrounds.</string>
    <string name="battery_light_settings">Battery charging light</string>
    <string name="battery_light_enable">Battery light</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_light_cat">Battery light color when charging</string>
    <string name="battery_light_low_color">Low battery</string>
    <string name="battery_light_medium_color">Medium battery</string>
    <string name="battery_light_full_color">Almost full battery</string>
    <string name="battery_light_reallyfull_color">Full (100) battery</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="network_traffic_type">Select net activity type</string>
    <string name="show_network_traffic_up">Uplink</string>
    <string name="show_network_traffic_down">Downlink</string>
    <string name="show_network_traffic_all">Uplink and Downlink</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="recents_clear_all_location_title">Clear all location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
    <string name="power_notification_controls_title">Power notification controls</string>
    <string name="power_notification_controls_summary">Select importance level for notifications</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="toast_icon_title">App\'s icon in toast</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_title_summary">View or change power menu entries</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_screenrecord">Screenrecord</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_restart">Restart</string>
    <string name="powermenu_restart_recovery">Advanced restart</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="powermenu_users">Users</string>
    <string name="powermenu_torch">Flashlight</string>
    <string name="lockscreen_power_menu_disabled_title">Power menu when locked</string>
    <string name="lockscreen_power_menu_disabled_summary">Disable power menu on secure lockscreen</string>
    <string name="recents_show_membar_title">Memory bar</string>
    <string name="recents_show_membar_summary">Show a bar with the device\'s available memory</string>
    <string name="brightness_icon_title">Brightness icon </string>
    <string name="brightness_icon_summary">Show a brightness icon to the right of the brightness slider to adjust auto-brightness</string>
    <string name="quick_pulldown_title">Quick pulldown</string>
    <string name="quick_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="quick_pulldown_summary_always">Always show Quick Settings on status bar pulldown</string>
    <string name="quick_pulldown_off">Off</string>
    <string name="quick_pulldown_left">Left</string>
    <string name="quick_pulldown_right">Right</string>
    <string name="quick_pulldown_always">Always</string>
    <string name="smart_pulldown_title">Smart pulldown</string>
    <string name="smart_pulldown_summary">Open quick settings when there are %1$s notifications</string>
    <string name="smart_pulldown_none_summary">Open quick settings when there are no notifications</string>
    <string name="smart_pulldown_off">Off</string>
    <string name="smart_pulldown_none">no notifications</string>
    <string name="smart_pulldown_dismissable">no dismissable</string>
    <string name="smart_pulldown_ongoing">no ongoing</string>
    <string name="lockscreen_tuner_title">Lockscreen Tuner</string>
    <string name="hide_lockscreen_items_title">Lockscreen items</string>
    <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
    <string name="double_tap_to_sleep_lockscreen_title">Double tap to sleep on lockscreen</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="double_tap_to_sleep_title">Double tap to sleep on status bar</string>
    <string name="double_tap_to_sleep_summary">Double tap on status bar to put the device to sleep</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="volume_category">Volume Rocker</string>
    <string name="power_category">Power Button</string>
    <string name="swap_volume_buttons_title">Swap volume rocker orientation</string>
    <string name="swap_volume_buttons_summary">Adjust the rocker orientation based on current rotation</string>
    <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_summary">Force volume keys to control media stream</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="cursor_section_header">Cursor</string>
    <string name="volume_key_cursor_control_title">Volume key cursor control</string>
    <string name="volume_key_cursor_control_off">Disabled</string>
    <string name="volume_key_cursor_control_on">Volume up/down moves cursor left/right</string>
    <string name="volume_key_cursor_control_on_reverse">Volume up/down moves cursor right/left</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="volume_answer_call_title">Volume keys answer</string>
    <string name="volume_answer_call_summary">Answer the call when volume keys pressed</string>
    <string name="qs_layout_category">QS tiles layout</string>
</resources>